--- a/HappyDart.Ui/Features/LogIn/LogInView.xaml
+++ b/HappyDart.Ui/Features/LogIn/LogInView.xaml
@@ -28,14 +28,32 @@
             Grid.Column="1"
             WidthRequest="200"
             HorizontalTextAlignment="Start"
-            HorizontalOptions="Start"
-            />
-        <Button
-            Text="Login"
+            HorizontalOptions="Start"/>
+        <Label
+            Text="password"
             Grid.Row="1"
+            Grid.Column="0"
+            HorizontalOptions="EndAndExpand"
+            VerticalOptions="Start"
+            FontSize="Large"
+            VerticalTextAlignment="End"
+            Padding="10"/>      
+        <Entry
+            Placeholder="Enter your password"
+            Grid.Row="1"
+            Grid.Column="1"
+            WidthRequest="200"
+            HorizontalTextAlignment="Start"
+            HorizontalOptions="Start"
+            IsPassword="True"/>
+
+        <Button
+            Text="LogIn"
+            Grid.Row="2"
             Grid.Column="0"
             HorizontalOptions="End"
             BackgroundColor="Grey"
+            
             />
     </Grid>
 
