ui - add login and main views with api connection

--- a/HappyDart.Ui/Features/LogIn/LogInView.xaml
+++ b/HappyDart.Ui/Features/LogIn/LogInView.xaml
@@ -53,7 +53,7 @@
             Grid.Column="0"
             HorizontalOptions="End"
             BackgroundColor="Grey"
-            
+            Command="{Binding LogInCommand}"
             />
     </Grid>
 
