--- a/HappyDart.Desktop/Modules/SignIn/SignInUserControl.xaml
+++ b/HappyDart.Desktop/Modules/SignIn/SignInUserControl.xaml
@@ -7,71 +7,110 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              Background="White">
-    <Grid>
-        <Grid.RowDefinitions >
-            <RowDefinition Height="200"/>
-            <RowDefinition Height="35"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="250" />
-            <ColumnDefinition Width="120"/>
-            <ColumnDefinition Width="150"/>
-            <ColumnDefinition />
-        </Grid.ColumnDefinitions>
+    
+    <UserControl.Resources>
+        <Style x:Key="SignInBtnStyle" TargetType="Button">
+            <Setter Property="Width" Value="80"/>
+            <Setter Property="Height" Value="30"/>
+            <Setter Property="Margin" Value="0 8 0 0"/>
+            <Setter Property="Background" Value="Blue"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="HorizontalAlignment" Value="Right"/>
+            <Setter Property="VerticalAlignment" Value="Top"/>
+        </Style>
+        <Style x:Key="LblStyle" TargetType="Label">
+            <Setter Property="HorizontalAlignment" Value="Right"/>
+            <Setter Property="VerticalAlignment" Value="Bottom"/>
+            <Setter Property="Padding" Value="0 0 5 6"/>
+            <Setter Property="FontSize" Value="20"/>
+        </Style>
+        <Style x:Key="TxtbxStyle" TargetType="TextBox">
+            <Setter Property="Grid.ColumnSpan" Value="2"/>
+            <Setter Property="Height" Value="25"/>
+            <Setter Property="HorizontalAlignment" Value="Stretch"/>
+            <Setter Property="VerticalAlignment" Value="Bottom"/>
+            <Setter Property="Margin" Value="10,0,0,7"/>
+        </Style>
+    </UserControl.Resources>
+    
+    
+        <TabControl
+            x:Name="LoginTbContrl" Grid.Column="0" Grid.Row="0"
+            Grid.ColumnSpan="4"
+            Grid.RowSpan="3"
+            Margin="20 5 20 5">
+            <TabItem
+                Header="Sign in">
+            <Grid>
+                <Grid.RowDefinitions >
+                    <RowDefinition Height="200"/>
+                    <RowDefinition Height="35"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="250" />
+                    <ColumnDefinition Width="120"/>
+                    <ColumnDefinition Width="150"/>
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Label 
+                    Grid.Column="0" Grid.Row="0"
+                    Content="e-mail"
+                    Style="{StaticResource LblStyle}"/>
+                <Label 
+                    Grid.Column="0" Grid.Row="1"
+                    Content="password"
+                    Style="{StaticResource LblStyle}"/>
+                <TextBox
+                    Grid.Column="1" Grid.Row="0"
+                    Style="{StaticResource TxtbxStyle}"/>
+                <TextBox
+                    Grid.Row="1" Grid.Column="1"
+                    Style="{StaticResource TxtbxStyle}"/>
+                <CheckBox
+                    Grid.Column="1" Grid.Row="2"
+                    Content="Remember me"
+                    Margin="10"/>
+                <Button
+                    Grid.Column="2" Grid.Row="2"
+                    Content="Sign in"
+                    Style="{StaticResource SignInBtnStyle}"/>
+            </Grid>
 
-        <Label 
-            Content="e-mail"
-            Grid.Row="0"
-            Grid.Column="0"
-            HorizontalAlignment="Right"
-            VerticalAlignment="Bottom"
-            Padding="0 0 5 6"
-            FontSize="20"/>
-        <Label 
-            Content="password"
-            Grid.Row="1"
-            Grid.Column="0"
-            HorizontalAlignment="Right"
-            Margin="0,0,0,0"
-            Padding="0 0 5 0"
-            FontSize="20"/>
-        <TextBox
-            Grid.Row="0"
-            Grid.Column="1"
-            Height="25"
-            HorizontalAlignment="Stretch"
-            VerticalAlignment="Bottom"
-            Margin="10,0,0,7"
-            Grid.ColumnSpan="2"/>
-        <PasswordBox
-            Grid.Row="1"
-            Grid.Column="1"
-            Height="25"
-            HorizontalAlignment="Stretch"
-            VerticalAlignment="Bottom"
-            Margin="10,0,0,7"
-            Grid.ColumnSpan="2"/>
-        <CheckBox
-            Grid.Row="2"
-            Grid.Column="1"
-            Content="Remember me"
-            Margin="10"
-            />
-        <Button
-            Grid.Row="2"
-            Grid.Column="2"
-            Width="80"
-            Height="30"
-            HorizontalAlignment="Right"
-            VerticalAlignment="Top"
-            Margin="0 8 0 0"
-            Background="Blue"
-            Content="LogIn"
-            Foreground="White"
-            />
-    </Grid>
-
-
-
+        </TabItem>
+            <TabItem
+                Header="Sign up">
+            <Grid>
+                <Grid.RowDefinitions >
+                    <RowDefinition Height="200"/>
+                    <RowDefinition Height="35"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="250" />
+                    <ColumnDefinition Width="120"/>
+                    <ColumnDefinition Width="150"/>
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Label 
+                    Grid.Column="0" Grid.Row="0"
+                    Content="e-mail"
+                    Style="{StaticResource LblStyle}"/>
+                <Label 
+                    Grid.Column="0" Grid.Row="1"
+                    Content="password"
+                    Style="{StaticResource LblStyle}"/>
+                <TextBox
+                    Grid.Column="1" Grid.Row="0"
+                    Style="{StaticResource TxtbxStyle}"/>
+                <TextBox
+                    Grid.Row="1" Grid.Column="1"
+                    Style="{StaticResource TxtbxStyle}"/>
+                <Button
+                    Grid.Column="2" Grid.Row="2"
+                    Content="Sign up"
+                    Style="{StaticResource SignInBtnStyle}"/>
+            </Grid>
+        </TabItem>
+    </TabControl>
 </UserControl>
