--- a/HappyDart.Desktop/Modules/SignIn/SignInUserControl.xaml
+++ b/HappyDart.Desktop/Modules/SignIn/SignInUserControl.xaml
@@ -74,7 +74,8 @@
                 <Button
                     Grid.Column="2" Grid.Row="2"
                     Content="Sign in"
-                    Style="{StaticResource SignInBtnStyle}"/>
+                    Style="{StaticResource SignInBtnStyle}"
+                    Command="{Binding SignInButtonCommand}"/>
             </Grid>
 
         </TabItem>
